<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <TextView
        android:id="@+id/textViewForecastTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"/>

    <TextView
        android:id="@+id/textViewForecastHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/textViewForecastWindSpeed"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline13"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textViewForecastPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewForecastWindSpeed" />


    <TextView
        android:id="@+id/textViewForecastWeatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_description"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForecastTemp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"/>

    <TextView
        android:id="@+id/textViewForecastWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imageViewForecastIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="2dp"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        app:layout_constraintLeft_toLeftOf="@+id/guideline13"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewForecastDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline12"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline13"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82222223" />


</android.support.constraint.ConstraintLayout>