<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWearherDescription"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
         />

    <TextView
        android:id="@+id/textViewWearherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_description"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline9"
         />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/temp"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline10" />

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:srcCompat="@android:drawable/ic_popup_sync"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
         />

        <TextView
            android:id="@+id/textViewTemperatureMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_min"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textViewTemperatureMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_max"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintRight_toLeftOf="@+id/guideline5">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinew1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18518518" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinew2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7407407" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinew4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinew3"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.34302327" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/wind"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelinew2"
            app:layout_constraintTop_toTopOf="@+id/guidelinew1"
            app:layout_constraintRight_toLeftOf="@+id/guidelinew3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/wind"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guidelinew4"
            app:layout_constraintLeft_toRightOf="@+id/guidelinew3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewWindSpeed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/wind"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guidelinew3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelinew4" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinep1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18518518" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinep2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7407407" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinep4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinep3"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.34302327" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/meter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelinep2"
            app:layout_constraintTop_toTopOf="@+id/guidelinep1"
            app:layout_constraintRight_toLeftOf="@+id/guidelinep3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/pressure"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guidelinep4"
            app:layout_constraintLeft_toRightOf="@+id/guidelinep3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPresure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guidelinep3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelinep4"
             />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintRight_toRightOf="@+id/guideline5">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineh1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18518518" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineh2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7407407" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineh4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineh3"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.34302327" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/humidity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineh2"
            app:layout_constraintTop_toTopOf="@+id/guidelineh1"
            app:layout_constraintRight_toLeftOf="@+id/guidelineh3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/humidity"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guidelineh4"
            app:layout_constraintLeft_toRightOf="@+id/guidelineh3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guidelineh3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineh4"
             />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelined1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18518518" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelined2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7407407" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelined4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelined3"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.34302327" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/wind_degree"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelined2"
            app:layout_constraintTop_toTopOf="@+id/guidelined1"
            app:layout_constraintRight_toLeftOf="@+id/guidelined3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wind_degree"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guidelined4"
            app:layout_constraintLeft_toRightOf="@+id/guidelined3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewWindDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_degree"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guidelined3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelined4" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.325" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69722223" />

    <ProgressBar
        android:id="@+id/progressBartoday"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>